--- a/static/templates/recipient_row.handlebars
+++ b/static/templates/recipient_row.handlebars
@@ -4,12 +4,15 @@
         <div class="message-header-contents">
             {{! stream link }}
             <a class="message_label_clickable narrows_by_recipient stream_label {{color_class}}"
+            
                 style="background: {{background_color}}; border-left-color: {{background_color}};"
                 href="{{stream_url}}"
                 title="{{#tr this}}Narrow to stream &quot;__display_recipient__&quot;{{/tr}}">
                 {{! invite only lock }}
                 {{#if invite_only}}
-                <i class="fa fa-lock invite-stream-icon" title="{{t 'This is a private stream' }}" aria-label="{{t 'This is a private stream' }}"></i>
+              
+                <i class="fa fa-lock invite-stream-icon"id="msg-clc"
+            data-toggle="tooltip" title="{{t 'This is a private stream' }}" aria-label="{{t 'This is a private stream' }}">  <span>{{#tr this}}Narrow to stream &quot;__display_recipient__&quot;{{/tr}}</span></i>
                 {{/if}}
                 {{display_recipient}}
             </a>
@@ -21,6 +24,9 @@
             <span class="stream_topic">
                 {{! topic link }}
                 <a class="message_label_clickable narrows_by_topic"
+                id="message-label-clickable"
+                    data-toggle="tooltip"
+
                     href="{{topic_url}}"
                     title="{{#tr this}}Narrow to stream &quot;__display_recipient__&quot;, topic &quot;__topic__&quot;{{/tr}}">
                     {{#if use_match_properties}}
@@ -51,7 +57,7 @@
                     <span class="topic_edit_form" id="{{id}}"></span>
                 </span>
 
-                <i class="fa fa-eye-slash on_hover_topic_mute" data-stream-id="{{stream_id}}" data-topic-name="{{topic}}" title="{{t 'Mute topic' }} (M)" role="button" tabindex="0" aria-label="{{t 'Mute topic' }} (M)"></i>
+                <i class="fa fa-eye-slash on_hover_topic_mute" id="eye-slash" data-toggle="tooltip" data-stream-id="{{stream_id}}" data-topic-name="{{topic}}" title="{{t 'Mute topic' }} (M)" role="button" tabindex="0" aria-label="{{t 'Mute topic' }} (M)"></i>
                 <span class="recipient_row_date {{#if group_date_divider_html}}{{else}}hide-date{{/if}}">{{{date}}}</span>
             </span>
         </div>
@@ -72,3 +78,12 @@
     </div>
 </div>
 {{/if}}
+{{!-- I have included the JS snippet here, please let me know the JS file path --}}
+
+<script>
+ $('#msg-clc').tooltip({placement: 'bottom',
+    animation: false})
+$('#eye-slash').tooltip({placement: 'bottom',
+    animation: false});
+
+</script>
