--- a/static/templates/single_message.handlebars
+++ b/static/templates/single_message.handlebars
@@ -57,14 +57,15 @@
                         {{#if msg/sent_by_me}}
                         <div class="edit_content"></div>
                         {{else}}
+                        <div
                         <div class="reaction_button">
-                            <i class="fa fa-smile-o" title="{{#tr this}}Add emoji reaction{{/tr}} (:)" aria-label="{{#tr this}}Add emoji reaction{{/tr}} (:)" role="button" aria-haspopup="true" tabindex="0"></i>
+                            <i class="fa fa-smile-o" aria-label="{{#tr this}}Add emoji reaction{{/tr}} (:)" role="button" aria-haspopup="true" tabindex="0"><span>Add emoji reaction (:)</span></i>
                         </div>
                         {{/if}}
 
                         {{#unless msg/locally_echoed}}
                         <div class="info actions_hover">
-                            <i class="fa fa-chevron-down" title="{{#tr this}}Message actions{{/tr}} (i)" title="{{#tr this}}Message actions{{/tr}}" role="button" aria-haspopup="true" tabindex="0" aria-label="{{#tr this}}Message actions{{/tr}}"></i>
+                            <i class="fa fa-chevron-down" role="button" aria-haspopup="true" tabindex="0" aria-label="{{#tr this}}Message actions{{/tr}}"><span>Message actions (i)</span></i>
                         </div>
                         {{/unless}}
 
@@ -74,7 +75,8 @@
                         </div>
 
                         {{#unless msg/locally_echoed}}
-                        <div class="star fa {{#if msg/starred}}fa-star{{else}}fa-star-o{{/if}} {{#if msg/starred}}{{else}}empty-star{{/if}}" title="{{#tr this.msg}}__starred_status__ this message{{/tr}} (*)">
+                        <div class="star-message star fa {{#if msg/starred}}fa-star{{else}}fa-star-o{{/if}} {{#if msg/starred}}{{else}}empty-star{{/if}}" >
+                        <span>Star this message (*)</span>
                         </div>
                         {{/unless}}
 
@@ -97,4 +99,89 @@
             </div>
         </div>
     </div>
-</div>
+</div> 
+
+{{!-- I have included the CSS snippet here, please let me know the CSS file path --}}
+
+    <style>
+        i.fa-smile-o span{
+            display: none;
+        }
+        i.fa-chevron-down span{
+            display: none;
+        }
+        .star-message span{
+            display: none;
+        }
+        i.fa-smile-o:hover span{
+            -webkit-border-radius: 4px;
+            -moz-border-radius: 4px;
+            border-radius: 4px;
+            background-color: hsla(0, 0%, 7%, 0.8);
+            padding: 3px 5px;
+            font-size: 11px;
+            line-height: 1.3;
+            opacity: 1;
+            display: block;
+            z-index: 9999;
+            color: #ffffff;
+            text-align: center;
+            text-decoration: none;
+            left: -60px;
+            margin: 10px;
+            width: 100px;
+            position: absolute;
+            top: 10px;
+            font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
+            text-decoration: none !important; 
+        }
+
+        
+        
+        i.fa-chevron-down:hover span{
+            -webkit-border-radius: 4px;
+            -moz-border-radius: 4px;
+            border-radius: 4px;
+            background-color: hsla(0, 0%, 7%, 0.8);
+            padding: 3px 5px;
+            font-size: 11px;
+            line-height: 1.3;
+            opacity: 1;
+            display: block;
+            z-index: 9999;
+            color: #ffffff;
+            text-align: center;
+            text-decoration: none;
+            left: -60px;
+            margin: 10px;
+            width: 100px;
+            position: absolute;
+            top: 10px;
+            font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
+            text-decoration: none !important; 
+        }
+
+        .star-message:hover span{
+             -webkit-border-radius: 4px;
+            -moz-border-radius: 4px;
+            border-radius: 4px;
+            background-color: hsla(0, 0%, 7%, 0.8);
+            padding: 3px 5px;
+            font-size: 11px;
+            line-height: 1.3;
+            opacity: 1;
+            display: block;
+            z-index: 9999;
+            color: #ffffff;
+            text-align: center;
+            text-decoration: none;
+            left: -30px;
+            margin: 10px;
+            width: 100px;
+            position: absolute;
+            top: 10px;
+            font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
+            text-decoration: none !important; 
+        }
+
+     </style>
