--- a/static/templates/user_presence_row.handlebars
+++ b/static/templates/user_presence_row.handlebars
@@ -2,10 +2,13 @@
     <div class="selectable_sidebar_block">
         <span class="{{user_circle_class}} user_circle"></span>
         <a class="user-presence-link"
+        id="user-presence-right-menu-link"
           href="{{href}}"
           data-user-id="{{user_id}}"
           data-name="{{name}}"
-          title="{{title}}">
+          data-toggle="tooltip"
+          data-title="{{title}}">  
+          
             {{name}}
             {{#if my_user_status}}
             <span class="my_user_status">{{my_user_status}}</span>
@@ -15,3 +18,9 @@
     </div>
     <span class="arrow"><i class="fa fa-chevron-down" aria-hidden="true"></i></span>
 </li>
+
+{{!-- I have included the JavaScript snippet here, please let me know the JS file's path --}}
+<script>
+      $('#user-presence-right-menu-link').tooltip({placement: 'top',
+    animation: false});
+</script>
