--- a/templates/zerver/app/compose.html
+++ b/templates/zerver/app/compose.html
@@ -9,7 +9,9 @@
             </div>
             <div id="compose_buttons">
                 <span class="new_message_button">
-                    <a class="drafts-link no-underline button small rounded compose_drafts_button" href="#drafts" title="{{ _('Drafts') }} (d)">
+
+                    <!-- modifications -->
+                    <a class="drafts-link no-underline button small rounded compose_drafts_button" id="left_bar_compose_draft_button_big" href="#drafts" data-toggle="tooltip" title="{{ _('Drafts') }} (d)">
                         {{ _('Drafts') }}
                     </a>
                     <span class="alert-draft pull-left">{{ _('Saved as draft') }}</span>
@@ -32,7 +34,7 @@
                 <span class="new_message_button">
                     <button type="button" class="button small rounded compose_private_button"
                       id="left_bar_compose_private_button_big"
-                      title="{{ _('New private message') }} (x)">
+                      title="{{ _('New private message') }}(x)">
                         <span class="compose_private_button_label">{{ _('New private message') }}</span>
                     </button>
                 </span>
