--- a/templates/zerver/portico-header-dropdown.html
+++ b/templates/zerver/portico-header-dropdown.html
@@ -1,6 +1,6 @@
 <div class="dropdown">
     <div class="dropdown-pill">
-        <img class="header-realm-icon" src="{{ realm_icon }}" alt="{{ _('Go to Zulip') }}"/>
+        <img class="header-realm-icon" src="{{ realm_icon }}" alt="{{ _('Go to Zulip') }}" />
         <div class="realm-name">{{ realm_name }}<i class="fa fa-chevron-down"></i></div>
     </div>
     <ul>
@@ -19,3 +19,35 @@
         </li>
     </ul>
 </div>
+
+<style>
+    i.fa-chevron-down span {
+        display: none;
+    }
+
+    i.fa-chevron-down span {
+        -webkit-border-radius: 4px;
+        -moz-border-radius: 4px;
+        border-radius: 4px;
+        background-color: hsla(0, 0%, 7%, 0.8);
+        padding: 3px 5px;
+        font-size: 11px;
+        line-height: 1.3;
+
+        opacity: 1;
+
+        display: block;
+        z-index: 1000009999999;
+        color: #ffffff;
+        text-align: center;
+        text-decoration: none;
+
+        left: -60px;
+        margin: 10px;
+        width: 100px;
+        position: absolute;
+        top: 10px;
+        font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
+        text-decoration: none !important;
+    }
+</style>
