--- a/static/templates/single_message.handlebars
+++ b/static/templates/single_message.handlebars
@@ -111,17 +111,11 @@
 {{!-- I have included the CSS snippet here, please let me know the CSS file path --}}
 <style>
     i.fa-smile-o span {
-        display: none;
-    }
-
+        display: none;}
     i.fa-chevron-down span {
-        display: none;
-    }
-
+        display: none;}
     .star-message span {
-        display: none;
-    }
-
+        display: none;}
     i.fa-smile-o:hover span {
         -webkit-border-radius: 4px;
         -moz-border-radius: 4px;
@@ -142,9 +136,7 @@
         position: absolute;
         top: 10px;
         font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
-        text-decoration: none !important;
-    }
-
+        text-decoration: none !important;}
     i.fa-chevron-down:hover span {
         -webkit-border-radius: 4px;
         -moz-border-radius: 4px;
@@ -165,9 +157,7 @@
         position: absolute;
         top: 10px;
         font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
-        text-decoration: none !important;
-    }
-
+        text-decoration: none !important;}
     .star-message:hover span {
         -webkit-border-radius: 4px;
         -moz-border-radius: 4px;
@@ -188,6 +178,5 @@
         position: absolute;
         top: 10px;
         font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
-        text-decoration: none !important;
-    }
+        text-decoration: none !important;}
 </style>
